--- a/assets/style.css
+++ b/assets/style.css
@@ -3,14 +3,17 @@ body {
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
 }
 
 aside {
 background-color: #ececec;
-/* margin-top: 20px; */
+/* margin: 10px; */
+}
 
+.list-group-item {
+    margin: 1px;
 }
 
 .weather-card {
@@ -21,9 +24,14 @@ background-color: #ececec;
 
 .weather-main {
     background-color: burlywood;
-    border: 10px, solid, black;
-    margin: 20px;
-    height: 600px;
+    /* margin: 10px; */
+    height: 550px;
+}
+
+.weather-city {
+    height: 250px;
+    /* margin: 20px; */
+    margin-top: 40px;
 }
 
 #main-city-name {
