--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,7 @@ background-color: #ececec;
 .weather-main {
     background-color: burlywood;
     /* margin: 10px; */
-    height: 550px;
+    /* height: 550px; */
 }
 
 .weather-city {
@@ -66,7 +66,7 @@ margin: 10px;
 .day {
     background-color: blue;
     /* text-align: center; */
-    margin: 15px;
+    margin: 5px;
     color: white;
     height: 150px;
     width: 75px;
