--- a/assets/style.css
+++ b/assets/style.css
@@ -1,18 +1,21 @@
 /* Whole Body Styling */
 body {
-    background-color: #81d4fa;
+    /* background-color: #81d4fa; */
+    background-image: linear-gradient(45deg, red 20%,orange, yellow 80%);
 }
 
 /* Title Styling */
 h1 {
     font-size: 30px;
     font-weight: bold;
-    color: white;
+    color: black;
 }
 
 /* Left side of page styling for search/buttons and past searches */
 aside {
-background-color: #ececec;
+/* background-color: #ececec; */
+background-color: rgba(255, 255, 255, 0.5);
+border: 1px solid black;
 padding-top: 15px;
 }
 
