--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,8 @@
 /* Whole Body Styling */
 body {
     /* background-color: #81d4fa; */
-    background-image: linear-gradient(45deg, red 20%,orange, yellow 80%);
+    /* background-image: linear-gradient(45deg, red 20%,orange, yellow 80%); */
+    background-image: linear-gradient(45deg, rgb(107, 163, 247), rgb(129, 201, 129), rgb(243, 233, 94) 97%)
 }
 
 /* Title Styling */
